# stockfish-cmake

./: .gitignore  CMakeLists.txt
